# glitchlab

./: .editorconfig  .env.local  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  EV.MD  GLX_ARCHITEKTURA_KATALOG.md  GlitchLab_Arch_v5.md  LICENSE  README.MD  README.md  __init__.py  __main__.py  debug_registry.py  plan_refaktoryzacji_gui_glitch_lab_panele_filtrow.md  pyproject.toml  structure.md
.githooks/: _common.py  commit-msg.cmd  commit-msg.py  post-commit  post-commit.cmd  post-commit.py  post-diff.py  pre-commit  pre-commit.py  prepare-commit-msg.cmd  prepare-commit-msg.py  save_repo.ps1
.glx/: GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-0b7978a_S-20250928035234_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-2c1d2a8_S-20250928013758_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-30922d1_S-20250928040045_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-59bddb5_S-20250928035644_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-6364e73_S-20250928033928_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-6b94a17_S-20250928035832_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-7593a73_S-20250928014203_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-8286b47_S-20250928033347_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-90a0f22_S-20250928033358_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-90edd88_S-20250928034754_PUB.patch  GLX_GH_DonkeyJJLove-glitchlab_at_main_B-74beff3_H-f735dae_S-20250928034305_PUB.patch  (+26 more)
(+553 files in other folders)
